--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,12 @@
 services:
   calibre-ingest:
+    container_name: calibre-ingest
+    image: ghcr.io/jonasherzfeld/calibre-ingest:dev
     build: .
     ports:
-      - "8080:80"
+      - "8085:80"
     environment:
       - ALLOWED_FILE_TYPES=epub,pdf,mobi,azw,azw3,txt,fb2,cbr,cbz
     volumes:
       - ./uploads:/uploads
     restart: unless-stopped
-
-volumes:
-  uploads:
