--- a/nginx.conf
+++ b/nginx.conf
@@ -16,10 +16,19 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        # Backend health check and config endpoint
+        location /api {
+            proxy_pass http://127.0.0.1:3000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Proxy API requests to backend
         location /api/ {
             rewrite ^/api/(.*) /$1 break;
-            proxy_pass http://localhost:3000;
+            proxy_pass http://127.0.0.1:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -28,7 +37,7 @@ http {
 
         # Direct backend access for development
         location /upload {
-            proxy_pass http://localhost:3000/upload;
+            proxy_pass http://127.0.0.1:3000/upload;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
