--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       - "8085:80"
     environment:
       - ALLOWED_FILE_TYPES=epub,pdf,mobi,azw,azw3,txt,fb2,cbr,cbz
+      - USER_ID=1000
+      - GROUP_ID=1000
     volumes:
       - ./uploads:/uploads
     restart: unless-stopped
